Fix form submit issue and MongoDB connection

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://ron:8mJ3B238P8hdAF6C@cluster0.0sbzodq.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb+srv://ron1:xxx123@cluster0.ttkd6g7.mongodb.net/?appName=Cluster0
 PORT=3000
